# road-damage-detection-system-

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  raw_bytes_test.py
backend/app/: config.py  main.py
backend/app/api/v1/: agent.py  detect.py  history.py  knowledge.py  knowledge_graph_api.py  reports.py  stats.py
backend/app/core/: constants.py  database.py
backend/app/models/: detection.py  knowledge.py  knowledge_graph.py  report.py
backend/app/schemas/: agent.py  common.py  detect.py  history.py  knowledge.py  knowledge_graph.py  report.py  stats.py
backend/app/services/: __init__.py  ai_analysis.py  excel_report.py  file_utils.py  kg_seed_data.py  knowledge_graph_service.py  llm_service.py  model_loader.py  pdf_report.py  report_service.py  semantic_search.py  word_report.py
backend/app/utils/: helpers.py
backend/weights/: README.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/ai/: page.tsx
frontend/src/app/detect/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/knowledge/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/statistics/: page.tsx
frontend/src/components/detection/: detection-panel.tsx  image-compare-modal.tsx  image-preview.tsx  result-stats.tsx  upload-area.tsx
frontend/src/components/knowledge/: graph-chart.tsx  knowledge-form.tsx  (+3 more)
frontend/src/lib/: api-types.ts  api.ts  utils.ts
frontend/src/stores/: use-chat-store.ts  use-detection-store.ts
frontend/src/types/: agent.ts  detection.ts
(+18 files in other folders)
